--- a/src/main/resources/assets/smoothboot/lang/pt_br.json
+++ b/src/main/resources/assets/smoothboot/lang/pt_br.json
@@ -1,16 +1,16 @@
 {
   "text.autoconfig.smoothboot.title": "ThreadTweak",
-  "text.autoconfig.smoothboot.option.threadCount": "Contagem de Threads",
-  "text.autoconfig.smoothboot.option.threadCount.bootstrap": "Contagem de Thread do Trabalhador de Inicialização",
-  "text.autoconfig.smoothboot.option.threadCount.bootstrap.@Tooltip[0]": "Observação: Sabe-se que o aumento diminui o desempenho.",
+  "text.autoconfig.smoothboot.option.threadCount": "Número de Threads",
+  "text.autoconfig.smoothboot.option.threadCount.bootstrap": "Threads na Inicialização",
+  "text.autoconfig.smoothboot.option.threadCount.bootstrap.@Tooltip[0]": "Atenção: Sabe-se que o aumento diminui o desempenho.",
   "text.autoconfig.smoothboot.option.threadCount.bootstrap.@Tooltip[1]": "Melhor deixar em 1.",
-  "text.autoconfig.smoothboot.option.threadCount.main": "Contagem de Thread do Trabalhador Principal",
-  "text.autoconfig.smoothboot.option.threadCount.main.@Tooltip[0]": "Esse valor afeta muito o tempo de carregamento.",
-  "text.autoconfig.smoothboot.option.threadCount.main.@Tooltip[1]": "Também pode afetar o desempenho no jogo.",
-  "text.autoconfig.smoothboot.option.threadPriority": "Prioridade da Thread",
+  "text.autoconfig.smoothboot.option.threadCount.main": "Thread do Processo Principal",
+  "text.autoconfig.smoothboot.option.threadCount.main.@Tooltip[0]": "Esse número influencia bastante o tempo de carregamento.",
+  "text.autoconfig.smoothboot.option.threadCount.main.@Tooltip[1]": "Pode impactar o desempenho durante o jogo também.",
+  "text.autoconfig.smoothboot.option.threadPriority": "Prioridade das Threads",
   "text.autoconfig.smoothboot.option.threadPriority.game": "Prioridade da Thread do Jogo",
-  "text.autoconfig.smoothboot.option.threadPriority.bootstrap": "Prioridade do Trabalhador de Inicialização",
-  "text.autoconfig.smoothboot.option.threadPriority.main": "Prioridade do Trabalhador Principal",
-  "text.autoconfig.smoothboot.option.threadPriority.io": "Prioridade do Trabalhador ES",
-  "text.autoconfig.smoothboot.option.threadPriority.integratedServer": "Prioridade da Thread do Servidor Integrado"
+  "text.autoconfig.smoothboot.option.threadPriority.bootstrap": "Prioridade da Inicialização",
+  "text.autoconfig.smoothboot.option.threadPriority.main": "Prioridade do Processo Principal",
+  "text.autoconfig.smoothboot.option.threadPriority.io": "Prioridade do IO",
+  "text.autoconfig.smoothboot.option.threadPriority.integratedServer": "Prioridade do Servidor Integrado"
 }
